--- a/package.json
+++ b/package.json
@@ -1,6 +1,29 @@
 {
-  "name": "abcstaps",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+   "name": "todo-it",
+   "version": "0.0.1",
+   "description": "Awesome project developed with TypeORM.",
+   "type": "commonjs",
+   "devDependencies": {
+      "@types/cors": "^2.8.13",
+      "@types/express": "^4.17.17",
+      "@types/morgan": "^1.9.4",
+      "@types/node": "^16.18.14",
+      "ts-node": "10.7.0",
+      "typescript": "^4.9.5"
+   },
+   "dependencies": {
+      "@types/bcrypt": "^5.0.0",
+      "bcrypt": "^5.1.0",
+      "cors": "^2.8.5",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "morgan": "^1.10.0",
+      "mysql": "^2.14.1",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.12"
+   },
+   "scripts": {
+      "start": "ts-node src/app.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   }
 }
